--- a/app/src/main/res/layout/explore_companylist_activity.xml
+++ b/app/src/main/res/layout/explore_companylist_activity.xml
@@ -106,12 +106,14 @@
             android:layout_weight=".33"
             android:layout_height="fill_parent" />
         <RelativeLayout
+            android:layout_gravity="center|center_horizontal"
             android:gravity="center|center_horizontal"
             android:layout_centerInParent="true"
             android:layout_width="0dp"
             android:layout_weight=".34"
             android:layout_height="match_parent">
             <TextView
+
                 android:layout_marginTop="8dp"
                 android:text="My Cart"
                 android:id="@+id/title_shop_mycartcount_textview"
