--- a/app/src/main/res/layout/explore_mycart_view_frag.xml
+++ b/app/src/main/res/layout/explore_mycart_view_frag.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content" />
 
     <android.support.v4.widget.SwipeRefreshLayout
-
+        android:layout_marginTop="10dp"
         android:paddingBottom="40dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -49,17 +49,18 @@
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="40dp">
         <LinearLayout
             android:background="@color/searchviewhintcolor"
             android:padding="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <TextView
                 android:id="@+id/total_cartcount_back"
-                android:layout_gravity="left"
+                android:layout_gravity="left|center"
+                android:text="Back"
                 android:layout_marginLeft="10dp"
-                android:textAlignment="center"
+                android:gravity="left"
                 android:textSize="14dp"
                 android:layout_weight=".33"
                 android:layout_width="0dp"
@@ -67,7 +68,6 @@
         <TextView
             android:id="@+id/total_cartcount_price_shop"
             android:layout_gravity="center"
-
             android:textAlignment="center"
             android:textSize="14dp"
             android:layout_weight=".33"
@@ -75,10 +75,10 @@
             android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/total_cartcount_checkout"
-
-                android:layout_gravity="right"
+                android:gravity="right"
+                android:layout_gravity="right|center"
                 android:layout_marginRight="4dp"
-                android:textAlignment="center"
+
                 android:textSize="14dp"
                 android:layout_weight=".33"
                 android:layout_width="0dp"
