--- a/app/src/main/res/layout/explore_product_detail_activity.xml
+++ b/app/src/main/res/layout/explore_product_detail_activity.xml
@@ -361,7 +361,7 @@ android:layout_gravity="bottom"
         android:layout_alignParentBottom="true"
         android:layout_width="fill_parent"
         android:id="@+id/cart_layout"
-        android:minHeight="50dp"
+        android:minHeight="45dp"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_above="@+id/footer">
@@ -377,6 +377,7 @@ android:layout_gravity="bottom"
             android:layout_weight=".33"
             android:layout_height="fill_parent" />
         <RelativeLayout
+            android:layout_gravity="center"
             android:gravity="center|center_horizontal"
             android:layout_centerInParent="true"
             android:layout_width="0dp"
