--- a/app/src/main/res/layout/explore_wishlist_frag.xml
+++ b/app/src/main/res/layout/explore_wishlist_frag.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content" />
 
         <android.support.v4.widget.SwipeRefreshLayout
-
+            android:layout_marginTop="10dp"
             android:paddingBottom="40dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -47,18 +47,19 @@
         android:id="@+id/cart_layout"
         android:orientation="vertical"
         android:layout_alignParentBottom="true"
+        android:background="@color/searchviewhintcolor"
         android:layout_width="match_parent"
-        android:layout_height="60dp">
+        android:layout_height="40dp">
         <LinearLayout
-            android:background="@color/searchviewhintcolor"
+
             android:padding="5dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="match_parent">
             <TextView
                 android:id="@+id/wishlist_back"
-                android:layout_gravity="left"
+                android:layout_gravity="left|center"
                 android:layout_marginLeft="10dp"
-                android:textAlignment="center"
+                android:text="Back"
                 android:textSize="14dp"
                 android:layout_weight=".33"
                 android:layout_width="0dp"
@@ -74,10 +75,10 @@
                 android:layout_height="wrap_content" />
             <TextView
                 android:id="@+id/total_wishlist_checkout"
-
-                android:layout_gravity="right"
-                android:layout_marginRight="4dp"
-                android:textAlignment="center"
+                android:text="Checkout"
+                android:layout_gravity="right|center"
+                android:layout_marginRight="10dp"
+                android:gravity="right"
                 android:textSize="14dp"
                 android:layout_weight=".33"
                 android:layout_width="0dp"
