--- a/app/src/main/res/layout/explore_select_payment_activity.xml
+++ b/app/src/main/res/layout/explore_select_payment_activity.xml
@@ -21,34 +21,7 @@
                 android:textSize="28dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
-            <LinearLayout
-                android:layout_marginTop="20dp"
 
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-
-                    android:id="@+id/your_delivery_location_title"
-                    android:textColor="@android:color/white"
-
-                    android:textSize="17sp"
-                    android:layout_width="0dp"
-                    android:layout_weight=".50"
-                    android:layout_height="wrap_content" />
-                <TextView
-
-                    android:id="@+id/your_delivery_backtocart"
-                    android:textColor="@android:color/white"
-                    android:textAlignment="center"
-                    android:textSize="17sp"
-                    android:background="@color/whitefood"
-                    android:padding="5dp"
-                    android:gravity="center|center_horizontal"
-                    android:layout_width="0dp"
-                    android:layout_weight=".50"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
 
 
             <LinearLayout
@@ -57,7 +30,23 @@
                 android:orientation="vertical"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+                <LinearLayout
+                    android:layout_marginTop="20dp"
 
+                    android:orientation="horizontal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:layout_marginLeft="10dp"
+                        android:id="@+id/your_delivery_location_title"
+                        android:textColor="@android:color/white"
+
+                        android:textSize="17sp"
+                        android:layout_width="0dp"
+                        android:layout_weight=".50"
+                        android:layout_height="wrap_content" />
+
+                </LinearLayout>
                 <LinearLayout
                     android:layout_marginTop="10dp"
 
@@ -74,27 +63,29 @@
 
                         <TextView
                             android:layout_marginTop="10dp"
-                            android:id="@+id/explore_user_delivery_type"
+                            android:id="@+id/explore_pay_products"
                             android:textColor="@android:color/white"
                             android:textSize="15sp"
                             android:layout_marginLeft="10dp"
                             android:textStyle="bold"
-
+                            android:text="Products"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content" />
                         <TextView
                             android:layout_marginTop="5dp"
-                            android:id="@+id/explore_user_delivery_totalitems"
+                            android:id="@+id/explore_pay_price"
                             android:textColor="@android:color/white"
+                            android:text="Price"
                             android:textSize="15sp"
                             android:layout_marginLeft="10dp"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content" />
                         <TextView
                             android:layout_marginTop="5dp"
-                            android:id="@+id/explore_user_delivery_address_Delivarycharges"
+                            android:id="@+id/explore_pay_discount"
                             android:textColor="@android:color/white"
                             android:textSize="15sp"
+                            android:text="Discount"
                             android:layout_marginLeft="10dp"
                             android:layout_marginBottom="8dp"
                             android:layout_width="match_parent"
@@ -107,8 +98,8 @@
                         android:layout_width="0dp"
                         android:layout_height="match_parent">
                         <TextView
-                            android:layout_marginTop="35dp"
-                            android:id="@+id/explore_user_delivery_totalitems_value"
+                            android:layout_marginTop="10dp"
+                            android:id="@+id/explore_pay_products_value"
                             android:textColor="@android:color/white"
                             android:textSize="15sp"
                             android:gravity="end"
@@ -117,7 +108,17 @@
                             android:layout_height="wrap_content" />
                         <TextView
                             android:layout_marginTop="5dp"
-                            android:id="@+id/explore_user_delivery_address_Delivarycharges_value"
+                            android:id="@+id/explore_pay_price_value"
+                            android:textColor="@android:color/white"
+                            android:textSize="15sp"
+                            android:gravity="end"
+                            android:layout_marginRight= "10dp"
+                            android:layout_marginBottom="8dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+                        <TextView
+                            android:layout_marginTop="5dp"
+                            android:id="@+id/explore_pay_discount_value"
                             android:textColor="@android:color/white"
                             android:textSize="15sp"
                             android:gravity="end"
@@ -127,17 +128,89 @@
                             android:layout_height="wrap_content" />
                     </LinearLayout>
                 </LinearLayout>
-                <LinearLayout
+                <RelativeLayout
+
+                    android:background="@android:color/white"
+                    android:id="@+id/line_separter_one_pay"
                     android:layout_marginRight="15dp"
                     android:layout_marginLeft="15dp"
                     android:layout_marginTop="7dp"
                     android:layout_width="match_parent"
                     android:layout_height="2dp">
-                    <View
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@android:color/white"/>
-                </LinearLayout>
+
+                </RelativeLayout>
+        <LinearLayout
+            android:layout_marginTop="10dp"
+
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <LinearLayout
+
+                android:orientation="vertical"
+                android:layout_weight=".50"
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/explore_pay_unique"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="10dp"
+                    android:textStyle="bold"
+                    android:text="Products"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/explore_pay_deliverycharge"
+                    android:textColor="@android:color/white"
+                    android:text="Price"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+            <LinearLayout
+                android:orientation="vertical"
+                android:layout_weight=".50"
+
+                android:layout_width="0dp"
+                android:layout_height="match_parent">
+                <TextView
+                    android:layout_marginTop="10dp"
+                    android:id="@+id/explore_pay_unique_value"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:gravity="end"
+                    android:layout_marginRight="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+                <TextView
+                    android:layout_marginTop="5dp"
+                    android:id="@+id/explore_pay_deliverycharge_value"
+                    android:textColor="@android:color/white"
+                    android:textSize="15sp"
+                    android:gravity="end"
+                    android:layout_marginRight= "10dp"
+                    android:layout_marginBottom="8dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </LinearLayout>
+                <RelativeLayout
+
+                    android:id="@+id/line_separter_two_pay"
+                    android:layout_marginRight="15dp"
+                    android:layout_marginLeft="15dp"
+                    android:layout_marginTop="7dp"
+                    android:layout_width="match_parent"
+                    android:background="@android:color/white"
+                    android:layout_height="2dp">
+
+                </RelativeLayout>
                 <RelativeLayout
                     android:layout_marginTop="5dp"
                     android:layout_width="match_parent"
@@ -167,90 +240,71 @@
                         android:layout_height="wrap_content" />
                 </RelativeLayout>
             </LinearLayout>
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_marginTop="10dp"
-                android:background="@color/whitefood"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_marginTop="5dp"
-                    android:id="@+id/explore_user_delivery_payment_title"
-                    android:textColor="@android:color/white"
-                    android:textSize="15sp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-                <RelativeLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:id="@+id/explore_user_delivery_payment_gateway"
-                        android:textColor="@android:color/white"
-                        android:textSize="15sp"
-                        android:layout_marginBottom="8dp"
-                        android:layout_alignParentLeft="true"
-                        android:layout_marginLeft="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
-                    <RadioButton
-                        android:layout_marginBottom="8dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="10dp"
-                        android:checked="true"
-                        android:buttonTint="@color/colorAccent"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
-                </RelativeLayout>
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_marginTop="10dp"
 
-                    android:background="@color/whitefood"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:layout_marginTop="5dp"
-                        android:id="@+id/explore_user_delivery_payment_option"
-                        android:textColor="@android:color/white"
-                        android:textSize="15sp"
-                        android:layout_marginLeft="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content" />
 
-                    <Spinner
-                        android:layout_marginBottom="8dp"
-                        android:spinnerMode="dropdown"
-                        android:background="@drawable/spinnerborderbox"
-                        android:layout_marginRight="12dp"
-                        android:minHeight="37dp"
-                        android:layout_marginTop="5dp"
-                        android:popupBackground="#555"
-                        android:id="@+id/explore_payment_option_spinnner"
-                        android:layout_width="match_parent"
-                        android:layout_height="37dp" />
-                </LinearLayout>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="10dp"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:background="#555"
-                    android:padding="5dp"
-                    android:layout_margin="5dp"
-                    android:id="@+id/your_delivery_placeorder"
-                    android:textColor="@android:color/white"
-                    android:gravity="center|center_horizontal"
-                    android:textAlignment="center"
-                    android:textSize="17sp"
-                    android:layout_width="match_parent"
-
-                    android:layout_height="wrap_content" />
-
-            </LinearLayout>
         </LinearLayout>
     </ScrollView>
+    <LinearLayout
+        android:layout_alignParentBottom="true"
+        android:layout_width="fill_parent"
+        android:id="@+id/cart_layout"
+        android:minHeight="50dp"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_above="@+id/footer">
+        <TextView
+            android:layout_marginTop="5dp"
+            android:layout_width="wrap_content"
+            android:id="@+id/back_textview"
+            android:layout_gravity="start|center"
+            android:layout_marginLeft="10dp"
+            android:gravity="start|center|center_horizontal"
+            android:textColor="@android:color/black"
+            android:text="Back"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+        <RelativeLayout
+            android:layout_gravity="center|center_horizontal"
+            android:gravity="center|center_horizontal"
+            android:layout_centerInParent="true"
+            android:layout_width="0dp"
+            android:layout_weight=".34"
+            android:layout_height="match_parent">
+            <TextView
+                android:layout_marginTop="8dp"
+                android:text="My Cart"
+                android:id="@+id/title_shop_mycartcount_textview"
+                android:textColor="@android:color/black"
+                android:textSize="15dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+            <TextView
+                android:layout_marginTop="2dp"
+                android:layout_toRightOf="@+id/title_shop_mycartcount_textview"
+                android:id="@+id/cart_main_count"
+                android:minWidth="24dp"
+                android:minHeight="22dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="0"
+                android:background="@drawable/batgetext"
+                android:gravity="center"
+                android:shadowColor="@android:color/white"
+                android:shadowRadius="10.0"
+                android:textColor="@android:color/white"
+                android:textSize="9sp"/>
+        </RelativeLayout>
+        <TextView
+            android:layout_marginTop="5dp"
+            android:textColor="@android:color/black"
+            android:layout_marginRight="10dp"
+            android:layout_width="wrap_content"
+            android:id="@+id/pay_textview"
+            android:text="Pay"
+            android:gravity="end|center|center_horizontal"
+            android:layout_gravity="right|center"
+            android:layout_weight=".33"
+            android:layout_height="fill_parent" />
+    </LinearLayout>
 </RelativeLayout>
