--- a/app/src/main/res/layout/explore_cart_address_feed.xml
+++ b/app/src/main/res/layout/explore_cart_address_feed.xml
@@ -13,15 +13,13 @@
 
 
         <LinearLayout
-            android:orientation="horizontal"
+            android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <LinearLayout
                 android:layout_marginTop="10dp"
-                android:layout_weight=".60"
-
                 android:orientation="vertical"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content">
                 <TextView
                     android:layout_marginTop="10dp"
@@ -54,51 +52,47 @@
             <LinearLayout
                 android:layout_marginTop="10dp"
                 android:orientation="horizontal"
-                android:layout_width="0dp"
-                android:layout_marginRight="5dp"
-                android:layout_weight=".40"
-
+                android:layout_width="match_parent"
+                android:layout_marginLeft="5dp"
                 android:layout_height="match_parent">
                 <TextView
+
+
                     android:id="@+id/explore_cartaddress_delete"
                     android:textColor="@android:color/white"
-                    android:layout_gravity="left"
                     android:textAlignment="center"
                     android:gravity="center|center_horizontal"
-                    android:layout_marginTop="5dp"
-
-                    android:textSize="14dp"
-                    android:layout_margin="5dp"
                     android:padding="5dp"
                     android:background="@color/whitefood"
+                    android:layout_margin="5dp"
+                    android:layout_marginTop="5dp"
+                    android:textSize="14dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
+
                 <TextView
-                    android:layout_gravity="right"
-                    android:layout_margin="5dp"
                     android:id="@+id/explore_cartaddress_edit"
                     android:textColor="@android:color/white"
                     android:textAlignment="center"
-
+                    android:gravity="center|center_horizontal"
                     android:padding="5dp"
                     android:background="@color/whitefood"
-
+                    android:layout_margin="5dp"
                     android:layout_marginTop="5dp"
-
                     android:textSize="14dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     />
-                <CheckBox
-                    android:id="@+id/usethisadd_check"
-                    android:layout_gravity="right"
-                    android:layout_margin="5dp"
-                    android:padding="5dp"
-                    android:background="@color/whitefood"
-                    android:layout_marginTop="5dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+                    <CheckBox
+                        android:layout_margin="3dp"
+                        android:id="@+id/usethisadd_check"
+                        android:layout_gravity="right"
+                        android:padding="5dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" />
+
             </LinearLayout>
 
         </LinearLayout>
