--- a/app/src/main/res/layout/explore_feed_item_spinnerproduct.xml
+++ b/app/src/main/res/layout/explore_feed_item_spinnerproduct.xml
@@ -4,6 +4,8 @@
     android:layout_marginBottom="5dp"
     android:layout_height="wrap_content">
     <LinearLayout
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -15,12 +17,12 @@
             android:id="@+id/product_imgae"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
-            android:layout_height="80dp" />
+            android:layout_height="90dp" />
         <LinearLayout
             android:orientation="vertical"
-            android:layout_weight=".50"
+            android:layout_weight=".75"
             android:layout_width="0dp"
-            android:layout_height="80dp">
+            android:layout_height="90dp">
             <TextView
                 android:layout_marginTop="7dp"
                 android:layout_marginLeft="5dp"
@@ -29,14 +31,7 @@
                 android:textSize="14sp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
-            <Spinner
-                android:layout_marginTop="2dp"
-                android:layout_marginLeft="5dp"
-                android:id="@+id/spin_product_price_list"
-                android:layout_width="wrap_content"
-                android:layout_height="20dp">
 
-            </Spinner>
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
@@ -61,24 +56,38 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             </LinearLayout>
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <Spinner
+                    android:layout_margin="5dp"
+                    android:layout_gravity="center|center_vertical"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginLeft="5dp"
+                    android:id="@+id/spin_product_price_list"
+                    android:layout_weight=".50"
+                    android:layout_width="0dp"
+                    android:layout_height="25dp">
 
+                </Spinner>
+                <TextView
+                    android:layout_margin="5dp"
+                    android:minHeight="25dp"
+                    android:padding="5dp"
+                    android:background="@color/searchviewhintcolor"
+                    android:layout_marginTop="8sp"
+                    android:layout_gravity="center|center_vertical"
+                    android:text="Add"
+                    android:textAlignment="center"
+                    android:layout_weight=".50"
+                    android:textSize="13sp"
+                    android:id="@+id/text_product_addtocart"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
         </LinearLayout>
-        <LinearLayout
-            android:background="@color/searchviewhintcolor"
-            android:orientation="vertical"
-            android:layout_gravity="center"
-            android:layout_weight=".25"
-            android:layout_width="0dp"
-            android:layout_height="30dp">
-            <TextView
-               android:layout_marginTop="8sp"
-                android:layout_gravity="center|center_vertical"
-                android:text="Add"
-                android:textSize="13sp"
-                android:id="@+id/text_product_addtocart"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-        </LinearLayout>
+
     </LinearLayout>
 
 </RelativeLayout>
