--- a/app/src/main/res/layout/explore_feed_item_withoutspinner.xml
+++ b/app/src/main/res/layout/explore_feed_item_withoutspinner.xml
@@ -5,11 +5,14 @@
     android:layout_height="wrap_content">
     <LinearLayout
         android:orientation="horizontal"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
 
         <com.android.volley.toolbox.NetworkImageView
+
             android:layout_width="0dp"
             android:layout_weight=".25"
             android:id="@+id/product_imgae_withoutspin"
