--- a/app/src/main/res/layout/explore_my_spinner_style.xml
+++ b/app/src/main/res/layout/explore_my_spinner_style.xml
@@ -2,7 +2,9 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
     style="?android:attr/spinnerItemStyle"
     android:singleLine="true"
+    android:paddingRight="4dp"
+    android:textAlignment="center"
     android:textColor="#ffffff"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:ellipsize="marquee" />
